<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">绘图</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clearcavans">清除画布</string>
	<string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <!-- 首页 -->
    <string name="main_home_measure">测量</string>
    <string name="main_home_file">文件</string>
    <string name="main_home_setting">设置</string>
    <string name="done">完成</string>
    <string name="datalist">数据清单</string>
    <string name="share">分享</string>
    <!-- 直线 -->
    <string name="line">直线</string>
    <string name="line_name">名称</string>
    <string name="line_lengh">长度</string>
    <string name="line_angle">角度</string>
    <string name="line_color">颜色</string>
    <string name="line_width">线宽</string>
    <string name="line_style">样式</string>
    <string name="line_description">描述</string>
    <!-- 多边形 -->
    <string name="polygone">多边形</string>
    <string name="polygon_name">名称</string>
    <string name="polygon_color">颜色</string>
    <string name="polygon_description">描述</string>
    <!-- 矩形 -->
    <string name="rectangle">面积</string>
    <string name="rectangle_name">名称</string>
    <string name="rectangle_area">面积</string>
    <string name="rectangle_lengh">长度</string>
    <string name="rectangle_width">宽度</string>
    <string name="rectangle_description">描述</string>
    <!-- 坐标 -->
    <string name="coordinate">体积</string>
    <string name="coordinate_name">名称</string>
    <string name="coordinate_volum">体积</string>
    <string name="coordinate_lengh">长度</string>
    <string name="coordinate_width">宽度</string>
    <string name="coordinate_height">高度</string>
    <string name="coordinate_description">描述</string>
    <!-- 角度 -->
    <string name="angle">角度</string>
    <string name="angle_name">名称</string>
    <string name="angle_line1">LINE1</string>
    <string name="angle_line2">LINE2</string>
    <string name="angle_line3">LINE3</string>
    <string name="angle_description">描述</string>
    <!-- 属性颜色 -->
    <string name="color_select">线段颜色</string>
    <string name="color_black">黑色</string>
    <string name="color_white">白色</string>
    <string name="color_red">红色</string>
    <string name="color_green">绿色</string>
    <string name="color_blue">蓝色</string>
    <string name="color_yelloy">黄色</string>
</resources>
