<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
     <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/btnback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/back_bg" />

        <Button
            android:id="@+id/editcomplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/main_color"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/color_select"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>
    
     <RelativeLayout 
         android:id="@+id/relative_check_black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View android:id="@+id/color_black"
             android:layout_centerVertical="true" 
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:background="#000000"
             />
         <TextView 
               android:layout_toRightOf="@+id/color_black"
              android:layout_centerVertical="true"
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_black"
             />
         <CheckBox 
             android:id="@+id/check_black"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </RelativeLayout>
 	 <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#DCDCDC" />
 	  <RelativeLayout 
 	     android:id="@+id/relative_check_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View 
             android:id="@+id/color_white"
             android:layout_centerVertical="true" 
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:background="#ffffff"
             />
         <TextView 
              android:layout_toRightOf="@+id/color_white"
              android:layout_centerVertical="true"
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_white"
             />
         <CheckBox 
             android:id="@+id/check_white"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </RelativeLayout>
 	 <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#DCDCDC" />
 	  <RelativeLayout 
 	     android:id="@+id/relative_check_red"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View 
             android:id="@+id/color_red"
             android:layout_centerVertical="true" 
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:background="#DC143C"
             />
         <TextView 
             android:layout_toRightOf="@+id/color_red"
              android:layout_centerVertical="true"
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_red"
             />
         <CheckBox 
             android:id="@+id/check_red"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </RelativeLayout>
 	 <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#DCDCDC" />
 	  <RelativeLayout 
 	     android:id="@+id/relative_check_green"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View 
             android:id="@+id/color_green"
             android:layout_centerVertical="true" 
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:background="#008000"
             />
         <TextView 
             android:layout_toRightOf="@+id/color_green"
              android:layout_centerVertical="true" 
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_green"
             />
         <CheckBox 
             android:id="@+id/check_green"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </RelativeLayout>
 	 <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#DCDCDC" />
 	  <RelativeLayout 
 	      android:id="@+id/relative_check_blue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View 
             android:id="@+id/color_blue"    
              android:layout_centerVertical="true"     
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:background="#0000CD"
             />
         <TextView 
             android:layout_toRightOf="@+id/color_blue"
              android:layout_centerVertical="true"  
             android:paddingLeft="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_blue"
             />
         <CheckBox 
             android:id="@+id/check_blue"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
     </RelativeLayout>    
 	 <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
             android:background="#DCDCDC" />
 	  <RelativeLayout 
 	     android:id="@+id/relative_check_yellow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
         android:gravity="center_vertical"
         >
         <View 
             android:id="@+id/color_yellow"
             android:layout_width="@dimen/color_size"
             android:layout_height="@dimen/color_size"
             android:layout_centerVertical="true"          
             android:background="#FFD700"
             />
         <TextView 
             android:layout_toRightOf="@+id/color_yellow"
             android:paddingLeft="10dp"
             android:layout_centerVertical="true"           
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="18sp"
             android:textColor="#000000"
             android:text="@string/color_yelloy"
             />

         <CheckBox
             android:id="@+id/check_yellow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             />

     </RelativeLayout>
 	 <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="#DCDCDC" />
</LinearLayout>
