<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        android:padding="8dp" >

        <ImageView
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="AttributeBack"
            android:src="@drawable/back_bg" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/main_color"
            android:onClick="EditComplete"
            android:text="完成"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/polygone"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="名称:"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editpolygonName"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.4"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:text="polygon"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC" />

            <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="面积:"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editpolygonArea"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.4"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="20m"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC" /> -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/onsetcolor"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/lineColor"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="颜色:"
                    android:textColor="#000000"
                    android:textSize="18sp" />
				<LinearLayout 
				    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
				    android:layout_weight="1.4"
				    >
				    
	               <View 
	                 android:id="@+id/settingcolor"
		             android:layout_width="@dimen/color_size"
		             android:layout_height="@dimen/color_size"
		             android:background="#FFD700"
		           	 android:layout_weight="1"
		             />
	               <TextView
	                   android:gravity="right"
	                   android:id="@+id/editpolygoneColor"
	                   android:layout_width="wrap_content"
	                   android:layout_height="fill_parent"
	                   android:layout_weight="1"
	                   android:text="红"
	                   android:textSize="18sp" />
				</LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="4"
                    android:text="描述:"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editpolygonDescripte"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.4"
                    android:background="@null"
                    android:imeOptions="actionDone"
                    android:text="描述"
                    android:textSize="18sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#DCDCDC" />

           <LinearLayout 
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:padding="6dp"
			    >
			    <TextView 
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:text="@string/line_name"
			        android:layout_weight="1"
			        android:gravity="center_horizontal"
			        android:textSize="18sp"
			        />
			    <TextView 
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:text="@string/line_lengh"
			        android:layout_weight="1"
			        android:gravity="center_horizontal"
			        android:textSize="18sp"
			        />
			    <TextView 
			        android:layout_width="0dip"
			        android:layout_height="wrap_content"
			        android:text="@string/line_angle"
			        android:layout_weight="1"
			        android:gravity="center_horizontal"
			        android:textSize="18sp"
			        />
			</LinearLayout>
			<View
	            android:layout_width="match_parent"
	            android:layout_height="0.5dp"
	            android:background="#DCDCDC" />
           <com.surveymapclient.utils.SubListView  
                         
               android:id="@+id/polygonlinelist"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:padding="4dp"
               android:divider="#DCDCDC"  
               android:dividerHeight="1px"
               android:listSelector="#DCDCDC"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>